Nginx integration has been adjusted

--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -2,7 +2,7 @@
 <body>
 <h1>Sign in form</h1>
 
-<form action="http://localhost:8080/authorize" method="get" target="_blank">
+<form action="/authorize" method="get" target="_blank">
     <label for="user">User name:</label>
     <input type="text" id="user" name="user"><br><br>
     <label for="password">Password:</label>
